# an-tensor-compiler

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  NOTICE  PHILOSOPHY.md  README.md
.github/workflows/: ci.yml
examples/: basic_rules.rs  learned_projection.rs  multi_head.rs  training_loop.rs
src/: lib.rs
src/compiler/: codegen.rs  inference.rs  mod.rs  parser.rs  validation.rs
src/compiler/codegen/: attention.rs  mod.rs  utils.rs
src/crdt/: mod.rs
src/federation/: algorithms.rs  mod.rs
src/holographic/: manifest.rs  mod.rs  ops.rs  storage.rs  types.rs
src/namespace/: mod.rs
src/primitives/: activations.rs  fuzzy_ops.rs  gnn.rs  mod.rs  tensor_ops.rs
src/training/: mod.rs
